--- a/src/Harald.IntegrationTests/appsettings.json
+++ b/src/Harald.IntegrationTests/appsettings.json
@@ -1,5 +1,4 @@
 ﻿{
   "SLACK_API_BOT_USER_ID": "B01V0V99KP1",
-  "SLACK_API_AUTH_TOKEN": "",
-  "SLACK_TESTING_USER_EMAIL": "toban@dfds.com"
+  "SLACK_API_AUTH_TOKEN": ""
 }
