--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,6 +61,7 @@ stages:
         SLACK_API_AUTH_TOKEN: $(SLACK_API_AUTH_TOKEN)
         SLACK_TESTING_USER_EMAIL: $(SLACK_TESTING_USER_EMAIL)
         SLACK_API_BOT_USER_ID: $(SLACK_API_BOT_USER_ID)
+        SLACK_DEFAULT_NOTIFICATION_CHANNEL_ID: $(SLACK_DEFAULT_NOTIFICATION_CHANNEL)
       displayName: Pipeline Bash Script
 
     - task: PublishTestResults@2
