--- a/src/Harald.IntegrationTests/appsettings.json
+++ b/src/Harald.IntegrationTests/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
   "SLACK_API_BOT_USER_ID": "B01V0V99KP1",
-  "SLACK_API_AUTH_TOKEN": ""
+  "SLACK_API_AUTH_TOKEN": "",
+  "SLACK_DEFAULT_NOTIFICATION_CHANNEL_ID": "AAA123BBB"
 }
