--- a/src/Harald.WebApi/appsettings.json
+++ b/src/Harald.WebApi/appsettings.json
@@ -1,5 +1,6 @@
 {
   "SLACK_API_BASE_URL": "https://slack.com/",
   "SLACK_API_BOT_USER_ID": "WMUSMU954",
+  "SLACK_DEFAULT_NOTIFICATION_CHANNEL_ID": "AAA123BBB",
   "AllowedHosts": "*"
 }
