--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,6 @@ pr: none
 
 # Variables and Variable Groups used in rest of pipeline
 variables:
-  #k8s-service-connection: 'Kubernetes-Hellman-Saml2aws'
   k8s-service-connection: 'Kubernetes-Hellman-selfservice-deploy'
   KUBENAMESPACE: 'selfservice-herald-vbqkr'
   vmImage: 'ubuntu-20.04'
@@ -111,30 +110,11 @@ stages:
           steps:
           # Setup auth against k8s
           - bash: |
-              VERSION=1.14.6
-              BUILD_DATE=2019-08-22
-              DOWNLOAD_URL=https://amazon-eks.s3-us-west-2.amazonaws.com/${VERSION}/${BUILD_DATE}/bin/linux/amd64/aws-iam-authenticator
-              LOCAL_FILE=./aws-iam-authenticator
-              curl -Lo $LOCAL_FILE $DOWNLOAD_URL
-              chmod +x $LOCAL_FILE
-              sudo mv $LOCAL_FILE /usr/local/bin
-
-              # Install saml2aws
-              VERSION=2.20.0
-              DOWNLOAD_URL=https://github.com/Versent/saml2aws/releases/download/v${VERSION}/saml2aws_${VERSION}_linux_amd64.tar.gz
-              LOCAL_FILE=./saml2aws.tar.gz
-              curl -Lo $LOCAL_FILE $DOWNLOAD_URL
-              tar xvzf $LOCAL_FILE
-              rm $LOCAL_FILE
-              sudo mv saml2aws /usr/local/bin
-
-              # Configure saml2aws
-              saml2aws configure --url=https://adfs.dfds.com/adfs/ls/IdpInitiatedSignOn.aspx --idp-provider=ADFS --mfa=Auto --session-duration=28800 --skip-prompt
-
-              saml2aws login --disable-keychain --url=https://adfs.dfds.com/adfs/ls/IdpInitiatedSignOn.aspx --idp-provider=ADFS --mfa=Auto --skip-prompt --force
-              eval $(saml2aws script --url=https://adfs.dfds.com/adfs/ls/IdpInitiatedSignOn.aspx --idp-provider=ADFS --mfa=Auto)
+              aws configure set aws_access_key_id $(AWS_ACCESS_KEY_ID) --profile saml
+              aws configure set aws_secret_access_key $(AWS_ACCESS_SECRET_KEY) --profile saml
             env:
-              SAML2AWS_PASSWORD: $(SAML2AWS_PASSWORD)
+              AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
+              AWS_SECRET_ACCESS_KEY: $(AWS_ACCESS_SECRET_KEY)
 
           # Download manifest from current artifacts pipeline
           - download: current
