--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,8 +94,8 @@ stages:
     container: cd_runner
     steps:
     - bash: |
-        aws configure set aws_access_key_id $(AWS_ACCESS_KEY_ID) --profile saml
-        aws configure set aws_secret_access_key $(AWS_ACCESS_SECRET_KEY) --profile saml
+        aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile saml
+        aws configure set aws_secret_access_key $AWS_ACCESS_SECRET_KEY --profile saml
         terragrunt apply --terragrunt-working-dir ./infrastructure/harald-postgres --terragrunt-source-update --terragrunt-non-interactive -input=false -auto-approve -var="db_name=$(PGDBNAME)" -var="db_master_username=$(PGUSER)" -var="db_master_password=$(PGPASSWORD)"
       env:
         AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
@@ -115,8 +115,8 @@ stages:
           steps:
           # Setup auth against k8s
           - bash: |
-              aws configure set aws_access_key_id $(AWS_ACCESS_KEY_ID) --profile saml
-              aws configure set aws_secret_access_key $(AWS_ACCESS_SECRET_KEY) --profile saml
+              aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile saml
+              aws configure set aws_secret_access_key $AWS_ACCESS_SECRET_KEY --profile saml
             env:
               AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
               AWS_SECRET_ACCESS_KEY: $(AWS_ACCESS_SECRET_KEY)
