--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,6 +94,10 @@ stages:
     container: cd_runner
     steps:
     - bash: |
+        echo "Key no brackets:"
+        echo $AWS_ACCESS_KEY_ID
+        echo "Key brackets:"
+        echo $(AWS_ACCESS_KEY_ID)
         aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile saml
         aws configure set aws_secret_access_key $AWS_ACCESS_SECRET_KEY --profile saml
         terragrunt apply --terragrunt-working-dir ./infrastructure/harald-postgres --terragrunt-source-update --terragrunt-non-interactive -input=false -auto-approve -var="db_name=$(PGDBNAME)" -var="db_master_username=$(PGUSER)" -var="db_master_password=$(PGPASSWORD)"
