--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,7 +87,7 @@ stages:
   dependsOn: CI
   condition: and(succeeded('CI'), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   pool:
-    vmImage: $(vmImage)  
+    vmImage: $(vmImage)
 
   jobs:
   - job: "Create_Infrastruture_On_AWS"
@@ -123,8 +123,8 @@ stages:
               echo $AWS_ACCESS_KEY_ID
               echo "Key brackets:"
               echo $(AWS_ACCESS_KEY_ID)
-              aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile saml
-              aws configure set aws_secret_access_key $AWS_ACCESS_SECRET_KEY --profile saml
+              aws configure set aws_access_key_id "$AWS_ACCESS_KEY_ID" --profile saml
+              aws configure set aws_secret_access_key "$AWS_ACCESS_SECRET_KEY" --profile saml
             env:
               AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
               AWS_SECRET_ACCESS_KEY: $(AWS_ACCESS_SECRET_KEY)
