--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,7 +101,7 @@ stages:
         aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile saml
         aws configure set aws_secret_access_key $AWS_ACCESS_SECRET_KEY --profile saml
         terragrunt apply --terragrunt-working-dir ./infrastructure/harald-postgres --terragrunt-source-update --terragrunt-non-interactive -input=false -auto-approve -var="db_name=$(PGDBNAME)" -var="db_master_username=$(PGUSER)" -var="db_master_password=$(PGPASSWORD)"
-      env:
+      # env:
         # AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
         # AWS_SECRET_ACCESS_KEY: $(AWS_ACCESS_SECRET_KEY)
 
