--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,9 +94,9 @@ stages:
     steps:
     - bash: |
         echo "Key no brackets:"
-        echo $AWS_ACCESS_KEY_ID
+        echo $C_AWS_ACCESS_KEY_ID
         echo "Key brackets:"
-        echo $(AWS_ACCESS_KEY_ID)
+        echo $(C_AWS_ACCESS_KEY_ID)
         aws configure set aws_access_key_id "$C_AWS_ACCESS_KEY_ID" --profile saml
         aws configure set aws_secret_access_key "$AWS_ACCESS_SECRET_KEY" --profile saml
         aws s3 ls --output json
