--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ stages:
   - job: "Create_ECR"
     container: ci_runner
     steps:
-    - bash:
+    - bash: |
         aws configure set aws_access_key_id $(C_AWS_ACCESS_KEY_ID) --profile saml
         aws configure set aws_secret_access_key $(AWS_SECRET_ACCESS_KEY) --profile saml
         terragrunt apply-all --terragrunt-working-dir ./build --terragrunt-source-update --terragrunt-non-interactive -input=false -auto-approve
