--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,7 @@ stages:
         aws configure set aws_secret_access_key $(AWS_SECRET_ACCESS_KEY) --profile saml
         ./pipeline.sh $(Build.BuildId) $(System.DefaultWorkingDirectory)
       env:
-        AWS_SECRET_ACCESS_KEY: $(AWS_SECRET_ACCESS_KEY)
+        AWS_PROFILE: saml
         SLACK_API_AUTH_TOKEN: $(SLACK_API_AUTH_TOKEN)
         SLACK_TESTING_USER_EMAIL: $(SLACK_TESTING_USER_EMAIL)
         SLACK_API_BOT_USER_ID: $(SLACK_API_BOT_USER_ID)
