--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: k8s-janitor
-description: A Helm chart for k8s-janitor
+name: harald
+description: A Helm chart for harald
 
 # A chart can be either an 'application' or a 'library' chart.
 #
