--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "k8s-janitor.fullname" . }}
+  name: {{ include "harald.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- if .Values.service.scrapeMetrics }}
     scrape-service-metrics: "true"
     {{- end }}
-    {{- include "k8s-janitor.labels" . | nindent 4 }}
+    {{- include "harald.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -20,4 +20,4 @@ spec:
       protocol: TCP
       name: metrics
   selector:
-    {{- include "k8s-janitor.selectorLabels" . | nindent 4 }}
+    {{- include "harald.selectorLabels" . | nindent 4 }}
