--- a/chart/templates/serviceaccount.yaml
+++ b/chart/templates/serviceaccount.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "k8s-janitor.serviceAccountName" . }}
+  name: {{ include "harald.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "k8s-janitor.labels" . | nindent 4 }}
+    {{- include "harald.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
