--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -7,7 +7,7 @@ managedByHelm: true
 environment: "develop"
 
 image:
-  repository: 640590921355.dkr.ecr.eu-west-1.amazonaws.com/ded/harald
+  repository: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/ded/harald
   pullPolicy: Always
   tag: "latest"
 
@@ -64,7 +64,7 @@ app:
 dbMigration:
   secretRef: harald-postgres
   image:
-    repository: 640590921355.dkr.ecr.eu-west-1.amazonaws.com/ded/harald/dbmigrations
+    repository: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/ded/harald/dbmigrations
     pullPolicy: Always
     tag: "latest"
 
